# sign_id

./: SignScraper.ipynb  main.py  pyproject.toml
.github/workflows/: ci.yml
backend/: main.py
checkpoints/: log.txt
frontend/src/: App.jsx
frontend/src/components/: Identify.jsx  Verify.jsx
frontend/src/styles/: App.css
parsed_signatures/: description.md  signatures.csv
parser/: SignScraper.ipynb
siamese_comparator/: inference.py  model.py  requirements.txt  train.py
signature_model/: dataset.py  detector.py  inference.py  model.py  train.py  utils.py
tests/: test_basic.py  test_signature_model.py
